#
# CHMPX
#
# Copyright 2014 Yahoo! JAPAN corporation.
#
# CHMPX is inprocess data exchange by MQ with consistent hashing.
# CHMPX is made for the purpose of the construction of
# original messaging system and the offer of the client
# library.
# CHMPX transfers messages between the client and the server/
# slave. CHMPX based servers are dispersed by consistent
# hashing and are automatically layouted. As a result, it
# provides a high performance, a high scalability.
#
# For the full copyright and license information, please view
# the LICENSE file that was distributed with this source code.
#
# AUTHOR:   Takeshi Nakatani
# CREATE:   Tue July 1 2014
# REVISION:
#

AUTOMAKE_OPTIONS = foreign no-dependencies

man_MANS = chmpx.1 chmpxbench.1 chmpxstatus.1 chmpxconftest.1 chmpxlinetool.1

SUBDIRS = examples

EXTRA_DIST = $(man_MANS)

#
# VIM modelines
#
# vim:set ts=4 fenc=utf-8:
#
